--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -2,7 +2,7 @@
   - "2024-02-01":
     - pageupdate:
         text: 杂项 > 博客建站记录
-        href: /杂项/博客建站记录/
+        href: ../杂项/博客建站记录/博客建站记录
   - "2024-01-31":
     - function:
         text: 建站！
