--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ theme:
     - toc.follow # toc 跟随
     - content.code.annotate
     - navigation.tracking
+    - content.code.copy
   language: 'zh'
   palette:
     # Palette toggle for light mode
@@ -86,7 +87,7 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
-
+  
 extra:
   analytics:
     provider: google
@@ -101,19 +102,16 @@ extra:
 copyright: '本页面的全部内容在 <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh">CC BY-SA 4.0</a> 和 <a href="https://github.com/zTrix/sata-license">SATA</a> 协议之条款下提供，附加条款亦可能应用'
 
 extra_css:
-  - 'from_oi_wiki/css/extra.css?v=13'
   - css/status.css
   - css/neoteroi-mkdocs.css
-
 extra_javascript:
-  - 'from_oi_wiki/js/extra.js'
   - js/mathjax.js # 支持数学公式，ref : https://squidfunk.github.io/mkdocs-material/reference/mathjax
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js # 支持表格排序
   - js/tablesort.js
-
 plugins:
+  - toc
   - search:
       separator: '[\s\u200b\-]'
   - statistics
@@ -126,12 +124,14 @@ plugins:
         - "%"
   - changelog:
       file: docs/changelog.yml
-
+  # - toc
 nav:
   - 主页:
     - index.md
     - 关于我: 主页/about.md
     - 最近更新: ./changelog.md
   - 杂项: 
-    - 杂项/博客建站记录.md
-    
+    - 杂项/index.md
+    - 杂项/博客建站记录/博客建站记录.md
+
+
