--- a/.github/workflows/autoBuild.yaml
+++ b/.github/workflows/autoBuild.yaml
@@ -1,3 +1,27 @@
+# name: autoBuild
+# on:
+#   push:
+#     branches:
+#       - master
+#       - main
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0
+#       - uses: actions/setup-python@v2
+#         with:
+#           python-version: 3.x
+#       - run: pip install -r requirements.txt
+#       - run: mkdocs gh-deploy --force
+#       - uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           personal_token: ${{ secrets.TOKEN }}
+#           publish_dir: ./publish
+#           publish_branch: gh-pages
+#           keep_files: true
 name: autoBuild
 on:
   push:
@@ -7,47 +31,34 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout mkdocs-toolchain
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
-      - uses: actions/setup-python@v2
+          repository: TonyCrane/mkdocs-toolchain
+          path: plugins/mkdocs-toolchain
+          fetch-depth: 0  # Ensure full history is available
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install -r requirements.txt
-      - run: mkdocs gh-deploy --force
-      - uses: peaceiris/actions-gh-pages@v3
+
+      - name: Install dependencies
+        run: |
+          cd plugins/mkdocs-toolchain
+          pip install -r requirements.txt
+
+      - name: Build and deploy Mkdocs
+        run: |
+          cd plugins/mkdocs-toolchain
+          mkdocs gh-deploy --force
+
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.TOKEN }}
           publish_dir: ./publish
           publish_branch: gh-pages
           keep_files: true
-# name: autoBuild 
-# on:
-#   push:
-#     branches:
-#       - master 
-#       - main
-# permissions:
-#   contents: write
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Configure Git Credentials
-#         run: |
-#           git config user.name github-actions[bot]
-#           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-#       - uses: actions/setup-python@v4
-#         with:
-#           python-version: 3.x
-#       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-#       - uses: actions/cache@v3
-#         with:
-#           key: mkdocs-material-${{ env.cache_id }}
-#           path: .cache
-#           restore-keys: |
-#             mkdocs-material-
-#       - run: pip install mkdocs-material 
-#       - run: mkdocs gh-deploy --force
