--- a/.github/workflows/autoBuild.yaml
+++ b/.github/workflows/autoBuild.yaml
@@ -52,6 +52,8 @@ jobs:
           python -m pip install setuptools
           cd plugins/mkdocs-toc-plugin
           python setup.py develop
+      - name: Create CNAME file
+        run: echo "hellohjk.site" > ./CNAME
       - run: mkdocs gh-deploy --force
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
