--- a/.github/workflows/autoBuild.yaml
+++ b/.github/workflows/autoBuild.yaml
@@ -53,7 +53,7 @@ jobs:
           cd plugins/mkdocs-toc-plugin
           python setup.py develop
       - name: Create CNAME file
-        run: echo "hellohjk.site" > ./CNAME
+        run: echo "hellohjk.site" > ./publish/CNAME
       - run: mkdocs gh-deploy --force
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
