--- a/.github/workflows/autoBuild.yaml
+++ b/.github/workflows/autoBuild.yaml
@@ -47,11 +47,16 @@ jobs:
           python-version: 3.x
 
       - run: pip install -r requirements.txt
+
       - name: Install dependencies
         run: |
           python -m pip install setuptools
           cd plugins/mkdocs-toc-plugin
           python setup.py develop
+
+      - name: Create publish directory
+        run: mkdir -p ./publish
+
       - name: Create CNAME file
         run: echo "hellohjk.site" > ./publish/CNAME
       - run: mkdocs gh-deploy --force
