更新算法板块

--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,4 +1,8 @@
 - "2024":
+  - "2024-02-04":
+    - pageupdate:
+        text: 算法 > 刷题记录
+        href: ../算法/刷题记录/刷题记录
   - "2024-02-01":
     - pageupdate:
         text: 杂项 > 博客建站记录
