--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,8 +131,11 @@ nav:
     - index.md
     - 关于我: 主页/about.md
     - 最近更新: ./changelog.md
+  - 算法:
+    - 算法/index.md
   - 杂项: 
     - 杂项/index.md
     - 杂项/博客建站记录/博客建站记录.md
+  
 
 
