更改span字体颜色跟随主题，增增加算法副标题

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,6 +133,7 @@ nav:
     - 最近更新: ./changelog.md
   - 算法:
     - 算法/index.md
+    - 算法/刷题记录/刷题记录.md
   - 杂项: 
     - 杂项/index.md
     - 杂项/博客建站记录/博客建站记录.md
