搬运笔记，增加图片

--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,6 +1,10 @@
 - "2024":
   - "2024-02-04":
     - pageupdate:
+        text: 算法 > 算法学习
+        href: ../算法/
+  - "2024-02-04":
+    - pageupdate:
         text: 算法 > 刷题记录
         href: ../算法/刷题记录/刷题记录
   - "2024-02-01":
