--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,7 +132,9 @@ nav:
     # - 最近更新: ./changelog.md
   - 项目开发:
     - 项目开发/index.md
-    - MVC项目结构: 项目开发/MVC项目结构/基础模板学习.md
+    - API开放平台: 
+      - 简介: 项目开发/api开放平台/index.md
+      - MVC框架学习: 项目开发/api开放平台/基础模板学习.md
   - Java相关:
     - java相关/index.md
     - HashCode: java相关/Java数据结构/HashCode/HashCode.md
